[gd_scene load_steps=8 format=3 uid="uid://kw2bpmeprgil"]

[ext_resource type="Texture2D" uid="uid://cwsuwp0bgudrl" path="res://Backgrounds/game_background_2/game_background_2.png" id="1_5gdau"]
[ext_resource type="Script" path="res://Scenes/options.gd" id="2_25enx"]
[ext_resource type="FontFile" uid="uid://c7ioxelc8k4et" path="res://Fonts/NorseBold-2Kge.otf" id="2_b2nts"]
[ext_resource type="Texture2D" uid="uid://nuccaumedxsh" path="res://GUI/WOODEN UI FOLDER/X button.png" id="3_sm35i"]
[ext_resource type="PackedScene" uid="uid://bphm1nidc7yqv" path="res://Scenes/Main_Menu_Music.tscn" id="5_6p3jn"]

[sub_resource type="LabelSettings" id="LabelSettings_db2ar"]
font = ExtResource("2_b2nts")
font_size = 40

[sub_resource type="Theme" id="Theme_bpyui"]
default_font = ExtResource("2_b2nts")
default_font_size = 40

[node name="Background" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5gdau")
script = ExtResource("2_25enx")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_b2nts")
theme_override_font_sizes/font_size = 150
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
offset_right = 31.0
offset_bottom = 34.0
scale = Vector2(4, 4)
texture_normal = ExtResource("3_sm35i")

[node name="BackgroundMusic" parent="." instance=ExtResource("5_6p3jn")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 591.0
offset_top = 178.0
offset_right = 1291.0
offset_bottom = 537.0
color = Color(0.0562916, 0.0562916, 0.0562916, 0.431373)

[node name="VolumeLabel" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 2
offset_left = 36.0
offset_top = 69.0
offset_right = 142.0
offset_bottom = 109.0
text = "Volume"
label_settings = SubResource("LabelSettings_db2ar")

[node name="Volume" type="HSlider" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.0
offset_top = 73.0
offset_right = 228.0
offset_bottom = 102.0
grow_horizontal = 2
scale = Vector2(1.2, 1.2)
min_value = -50.0
max_value = 50.0
value = 1.0

[node name="MuteLabel" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 2
offset_left = 34.0
offset_top = 142.0
offset_right = 101.0
offset_bottom = 182.0
text = "MUTE"
label_settings = SubResource("LabelSettings_db2ar")

[node name="Mute" type="CheckBox" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.5
offset_top = -55.0
offset_right = -211.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
theme = SubResource("Theme_bpyui")
theme_override_fonts/font = ExtResource("2_b2nts")
theme_override_font_sizes/font_size = 30
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="ResolutionLabel" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.5
offset_top = 43.0
offset_right = -58.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "CSHOOSE RESOLUTION"
label_settings = SubResource("LabelSettings_db2ar")
horizontal_alignment = 1

[node name="Resolutions" type="OptionButton" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.5
offset_top = 47.0
offset_right = 144.5
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="ColorRect/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="ColorRect/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="ColorRect/Resolutions" to="." method="_on_resolutions_item_selected"]
